# rAndroidRoot-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
androidroot/: checks.py  config.py  emoji.py  state.py  strings.py  utilities.py
data/: config.EXAMPLE.ini  strings.json
