[tool.poetry]
name = "randroidroot-bot"
version = "0.1.0"
description = "A bot for the official r/AndroidRoot Discord server."
authors = ["Simon Goričar <simon.peter.goricar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
